--- a/ml-100k/README
+++ b/ml-100k/README
@@ -1,3 +1,4 @@
+请将devi.rar，devimul.rar文件解压到当前文件夹。它们存储了items之间流行度和frequency的信息！！！
 SUMMARY & USAGE LICENSE
 =============================================
 
